# PolyDataShrink

./: CMakeLists.txt  README.txt  main.cxx
